Fix table header spacing

--- a/src/app/Budgeting/components/BudgetTable/index.scss
+++ b/src/app/Budgeting/components/BudgetTable/index.scss
@@ -9,7 +9,6 @@
   height: 36px;
 
   .ant-checkbox-wrapper {
-    margin-right: 8px;
     .ant-checkbox {
       padding: 10px;
       padding-left: 0px;
